[project]
name = "untitled-game"
version = "0.0.0"
dependencies = [
    "matplotlib",
    "pygame",
    "PyGObject",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
utg-graphdriver = "utg.devel.graph_driver:main"
utg-leveldriver = "utg.devel.level_driver:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
