[project]
name = "untitled-game"
version = "0.0.0"
dependencies = [
    "pygame",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
testkarst = "utg.devel.karst_driver:main"
utg-mazedriver = "utg.devel.maze_driver:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
